added fade in effect on scroll

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Compiled and minified JavaScript -->
 
 
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins|Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins" rel="stylesheet">
     <link rel='stylesheet' href='assets/css/style.css'>
     </link>
     <script src="https://code.jquery.com/jquery-3.4.0.js"
@@ -58,31 +58,38 @@
         </div>
         <div class="parallax"><img src="assets/images/seattle.jpg"></div>
     </div>
-    <h1 class='header teal darken-1'>Projects</h1>
+    <section>
+        <h1 class='header teal darken-1'>Projects</h1>
+    </section>
     </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/weatherSpot.jpg"></div>
-    </div>
-    <footer class="page-footer teal lighten-4">
-        <div class="container">
-            <div class="row">
-                <div class="col l8 offset-l2 s12">
-                    <div class='logoSet'>
-                        <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
-                                alt="github"></a>
-                        <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
-                                src="assets/images/linkedin.svg" alt="linkedin"></a>
-
-                        <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
-                                class='logoLink' src="assets/images/resume.png" alt="resume"></a>
+    <section>
+        <div class="parallax-container">
+            <div class="parallax"><img src="assets/images/weatherSpot.jpg"></div>
+        </div>
+    </section>
+    <section>
+        <footer class="page-footer teal lighten-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col l8 offset-l2 s12">
+                        <div class='logoSet'>
+                            <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
+                                    alt="github"></a>
+                            <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
+                                    src="assets/images/linkedin.svg" alt="linkedin"></a>
+    
+                            <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
+                                    class='logoLink' src="assets/images/resume.png" alt="resume"></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer-copyright">
-            <div class='container'>© 2019 Copyright Brandon Lublin</div>
-        </div>
-    </footer>
+            <div class="footer-copyright">
+                <div class='container'>© 2019 Copyright Brandon Lublin</div>
+            </div>
+        </footer>
+    </section>
+
 </body>
 
 </html>
