started on mobile layout, added 3 projects and formatted them in a zigzag pattern

--- a/index.html
+++ b/index.html
@@ -53,20 +53,37 @@
 
     <div class="parallax-container mainImg">
         <div class="row hero-header">
-            <h1 class="header white-text">Hello, I'm Brandon Lublin.</h1>
-            <h4 class="white-text header">I'm a full stack web developer based out of Seattle, WA.</h4>
+            <h1 class="header">Hello, I'm Brandon Lublin.</h1>
+            <h4 class="header">I'm a full stack web developer based out of Seattle, WA.</h4>
         </div>
         <div class="parallax"><img src="assets/images/seattle.jpg"></div>
     </div>
     <section>
-        <h1 class='header teal darken-1'>Projects</h1>
+        <h1 class='header teal darken-1'>Here Are A Few Of My Projects</h1>
     </section>
     </div>
     <section>
-        <div class="parallax-container">
-            <div class="parallax"><img src="assets/images/weatherSpot.jpg"></div>
+        <h2 class='col s12 projectTitle'>Weather Spot</h2>
+        <div class='row'>
+            <a href="http://brandonlublin.github.io/weather-spot/"><img class="col s6" src="assets/images/weatherSpot.jpg"></a>
+            <h5 class='col s6 flow-text'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
         </div>
     </section>
+    <section>
+        <h2 class='col s6 projectTitle'>Friend Finder</h2>
+        <div class='row'>
+            <h5 class='col s6'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
+            <a href="https://friend-finder-fsf.herokuapp.com/"><img class="col s6" src="assets/images/friendfinder.png"></a>
+        </div>
+    </section>
+    <section>
+        <h2 class='col s6 projectTitle'>KEBÄB</h2>
+        <div class='row projects'>
+            <a href="https://project2team6.herokuapp.com/"><img class="col s6" src="assets/images/kebab.png"></a>
+            <h5 class='col s6'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
+        </div>
+    </section>
+    
     <section>
         <footer class="page-footer teal lighten-4">
             <div class="container">
