--- a/about.html
+++ b/about.html
@@ -58,51 +58,41 @@
             <h1 id='name-header col s6'>Brandon Lublin</h1>
         </div>
     </div>
-    <section>
-        <h3 class='header'>A Little Bit About Me</h3>
-        <div class="row container">
-            <p class='aboutMe'>My name is Brandon Lublin and I am an aspiring Full Stack developer! I got my first exposure in coding while in highschool. My highschool offered a 'Computer Basics and Web Design' course that taught me basic HTML principles and dabbled in CSS, but this was way back in 2008 so things have changed dramatically since then.</p>
+    <h3 class='header teal darken-1'>A Little Bit About Me</h3>
+    <div class="row container">
+        <p class='aboutMe'>My name is Brandon Lublin and I am an aspiring Full Stack developer! I got my first exposure in coding while in highschool. My highschool offered a 'Computer Basics and Web Design' course that taught me basic HTML principles and dabbled in CSS, but this was way back in 2008 so things have changed dramatically since then.</p>
 
-            <p class='aboutMe'>I went to college at Boise State University where I studied History in hopes of getting into Law School but quickly determined that I wasn't cut out for the mass amounts of paperwork that comes with being a lawyer. After a few years away from school, and with my current position integrating a few skills that I thought were fairly similar to coding, I thought what better way to go back to school and finish what I started while trying to jump into a new career that I have a genuine interest in!?</p>
+        <p class='aboutMe'>I went to college at Boise State University where I studied History in hopes of getting into Law School but quickly determined that I wasn't cut out for the mass amounts of paperwork that comes with being a lawyer. After a few years away from school, and with my current position integrating a few skills that I thought were fairly similar to coding, I thought what better way to go back to school and finish what I started while trying to jump into a new career that I have a genuine interest in!?</p>
 
-            <p class='aboutMe'>Anything that involves the outdoors is my lifeblood. In the summer, I love to hike, swim, travel, and go to sporting events, and during the winter, you'll have a tough time finding me anywhere else than the mountain. Snowboarding is probably my biggest hobby and there isn't many things I'd rather do than freeze my face off while cruising through some fluffy snow!!</p>
-        </div>
-        <br><br>
-    </section>
-    <section>
-        <div class="parallax-container">
-            <div class="parallax"><img src="assets/images/rainier.jpg"></div>
-        </div>
-    </section>
-    <section>
-        <h3 class='header'>Want To Get In Touch?</h3>
-        <div class="container">
-            <div class="row">
-                <form method="POST" action="https://formspree.io/brandonlublin26@gmail.com" class="col s12">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <input id="first_name" type="text" class="validate">
-                            <label for="first_name">First Name</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <input id="last_name" type="text" class="validate">
-                            <label for="last_name">Last Name</label>
-                        </div>
+        <p class='aboutMe'>Anything that involves the outdoors is my lifeblood. In the summer, I love to hike, swim, travel, and go to sporting events, and during the winter, you'll have a tough time finding me anywhere else than the mountain. Snowboarding is probably my biggest hobby and there isn't many things I'd rather do than freeze my face off while cruising through some fluffy snow!!</p>
+    </div>
+    <h3 class='header teal darken-1'>Want To Get In Touch?</h3>
+    <div class="container">
+        <div class="row">
+            <form method="POST" action="https://formspree.io/brandonlublin26@gmail.com" class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
                     </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="email" type="email" class="validate">
-                            <label for="email">Email</label>
-                        </div>
-                        <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
-                            type="submit">Send Email</button>
+                    <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
                     </div>
-                    <br><br>
-                </form>
-            </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                    </div>
+                    <button id='submitButton' class='waves-effect waves-light btn-small waves-light'
+                        type="submit">Send Email</button>
+                </div>
+                <br><br>
+            </form>
         </div>
-        <br><br>
-    </section>
+    </div>
+    <br><br>
 
     <section>
         <footer class="page-footer teal darken-1">
