--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </div>
             </div>
         </li>
-        <li><a href="#!"><i>cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
+
         <li>
             <div class="divider"></div>
         </li>
-        <li><a class="subheader">Subheader</a></li>
+        <li><a class="subheader">Links</a></li>
         <li><a class="waves-effect" href="/about.html">About Me</a></li>
+        <li><a class="waves-effect" href="https://twitter.com/BrandonLublin">Twitter</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
@@ -62,7 +62,6 @@
         <h1 class='header teal darken-1'>Here Are A Few Of My Projects</h1>
     </section>
     </div>
-    <section>
         <h2 class='col s12 projectTitle'>Weather Spot</h2>
         <div class='row'>
             <a href="http://brandonlublin.github.io/weather-spot/"><img class="col s6" src="assets/images/weatherSpot.jpg"></a>
