fixed links on about me menu page

--- a/about.html
+++ b/about.html
@@ -31,13 +31,12 @@
                 </div>
             </div>
         </li>
-        <li><a href="#!"><i>cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
         <li>
             <div class="divider"></div>
         </li>
-        <li><a class="subheader">Subheader</a></li>
+        <li><a class="subheader">Links</a></li>
         <li><a class="waves-effect" href="/index.html">Home</a></li>
+        <li><a class="waves-effect" href="twitter.com/brandonlublin">Twitter</a></li>
         <br><br>
         <div class='logoSet'>
             <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
