changed each project to a card for cleanliness

--- a/index.html
+++ b/index.html
@@ -53,33 +53,152 @@
 
     <div class="parallax-container mainImg">
         <div class="row hero-header">
-            <h1 class="header">Hello, I'm Brandon Lublin.</h1>
-            <h4 class="header">I'm a full stack web developer based out of Seattle, WA.</h4>
+            <div class="row col l12 m6 s12">
+                <h1 class="header">Hello, I'm Brandon Lublin.</h1>
+                <h4 class="header">I'm a full stack web developer based out of Seattle, WA.</h4>
+            </div>
         </div>
         <div class="parallax"><img src="assets/images/seattle.jpg"></div>
     </div>
     <section>
-        <h1 class='header teal darken-1'>Here Are A Few Of My Projects</h1>
-    </section>
-    </div>
-        <h2 class='col s12 projectTitle'>Weather Spot</h2>
-        <div class='row'>
-            <a href="http://brandonlublin.github.io/weather-spot/"><img class="col s6" src="assets/images/weatherSpot.jpg"></a>
-            <h5 class='col s6 flow-text'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
+        <div class="row">
+            <div class='col l4 m6 s12'>
+                <div class="card sticky-action">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/weatherSpot.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">WeatherSpot<i class="material-icons right">more_vert</i></span>
+                        <a href="http://brandonlublin.github.io/weather-spot/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">WeatherSpot<i class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                            <li>API (Youtube and WeatherAPI)</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
+            <div class='col l4 m6 s12'>
+                <div class="card sticky-action">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/friendfinder.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Friend Finder<i class="material-icons right">more_vert</i></span>
+                        <a href="https://friend-finder-fsf.herokuapp.com/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Friend Finder<i class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
+            <div class='col l4 m6 s12'>
+                <div class="card sticky-action">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/kebab.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">KEBÄB<i class="material-icons right">more_vert</i></span>
+                        <a href="https://project2team6.herokuapp.com/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">KEBÄB<i class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                            <li>Materialize</li>
+                            <li>MySQL</li>
+                            <li>Sequelize</li>
+                            <li>Socket.io</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
         </div>
     </section>
     <section>
-        <h2 class='col s6 projectTitle'>Friend Finder</h2>
-        <div class='row'>
-            <h5 class='col s6'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
-            <a href="https://friend-finder-fsf.herokuapp.com/"><img class="col s6" src="assets/images/friendfinder.png"></a>
-        </div>
-    </section>
-    <section>
-        <h2 class='col s6 projectTitle'>KEBÄB</h2>
-        <div class='row projects'>
-            <a href="https://project2team6.herokuapp.com/"><img class="col s6" src="assets/images/kebab.png"></a>
-            <h5 class='col s6'>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</h5>
+        <div class="row">
+            <div class='col l4 m6 s12'>
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/triviagame.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Trivia Game<i class="material-icons right">more_vert</i></span>
+                        <a href="https://brandonlublin.github.io/triviagame/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Trivia Game<i class="material-icons right">close</i></span>
+                        <p>Trivia Game is a fun, multiple choice game, that asks the user questions pertaining to the 90's. If you think you know the 90's well, put your skills to the test and try it out!</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
+            <div class='col l4 m6 s12'>
+                <div class="card sticky-action">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/giphy.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Giphy 2.0<i class="material-icons right">more_vert</i></span>
+                        <a href="https://friend-finder-fsf.herokuapp.com/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Giphy 2.0<i class="material-icons right">close</i></span>
+                        <p>Giphy 2.0 is a user interface that pulls and displays GIFs from Giphy's API. You can select one of the preset categories or search your own, and 10 GIFs will display.</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
+            <div class='col l4 m6 s12'>
+                <div class="card sticky-action">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/trainStation.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Train Schedule App<i class="material-icons right">more_vert</i></span>
+                        <a href="https://brandonlublin.github.io/train-schedule/">View Live Demo</a>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Train Station App<i class="material-icons right">close</i></span>
+                        <p>This Train Schedule allows users to view preexisting train schedules as well as add their own schedule to the interface. Once the user enters each piece of required data, it will be added to the table, and update the schedule every minute.</p>
+                        <br>
+                        <ul>
+                            <li><strong>Built With:</strong></li>
+                            <li>JavaScript</li>
+                            <li>JQuery</li>
+                            <li>Firebase</li>
+                        </ul>
+                    </div>
+                </div> 
+            </div>
         </div>
     </section>
     
