added skills and fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Poppins" rel="stylesheet">
     <link rel='stylesheet' href='assets/css/style.css'>
     </link>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="https://code.jquery.com/jquery-3.4.0.js"
         integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
     <script src='assets/javascript/app.js'></script>
@@ -68,12 +69,17 @@
                         <img class="activator" src="assets/images/weatherSpot.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">WeatherSpot<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">WeatherSpot<i
+                                class="material-icons right">more_vert</i></span>
                         <a href="http://brandonlublin.github.io/weather-spot/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">WeatherSpot<i class="material-icons right">close</i></span>
-                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <span class="card-title grey-text text-darken-4">WeatherSpot<i
+                                class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the
+                            particular mood of the current weather. Using the WeatherAPI alongside the YouTube API,
+                            WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while
+                            checking their local weather.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -82,7 +88,7 @@
                             <li>API (Youtube and WeatherAPI)</li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
@@ -90,12 +96,17 @@
                         <img class="activator" src="assets/images/friendfinder.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Friend Finder<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Friend Finder<i
+                                class="material-icons right">more_vert</i></span>
                         <a href="https://friend-finder-fsf.herokuapp.com/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Friend Finder<i class="material-icons right">close</i></span>
-                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <span class="card-title grey-text text-darken-4">Friend Finder<i
+                                class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the
+                            particular mood of the current weather. Using the WeatherAPI alongside the YouTube API,
+                            WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while
+                            checking their local weather.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -104,7 +115,7 @@
                             <li>Bootstrap</li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
@@ -112,12 +123,17 @@
                         <img class="activator" src="assets/images/kebab.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">KEBÄB<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">KEBÄB<i
+                                class="material-icons right">more_vert</i></span>
                         <a href="https://project2team6.herokuapp.com/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">KEBÄB<i class="material-icons right">close</i></span>
-                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the particular mood of the current weather. Using the WeatherAPI alongside the YouTube API, WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while checking their local weather.</p>
+                        <span class="card-title grey-text text-darken-4">KEBÄB<i
+                                class="material-icons right">close</i></span>
+                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the
+                            particular mood of the current weather. Using the WeatherAPI alongside the YouTube API,
+                            WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while
+                            checking their local weather.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -129,7 +145,7 @@
                             <li>Socket.io</li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
     </section>
@@ -141,12 +157,15 @@
                         <img class="activator" src="assets/images/triviagame.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Trivia Game<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Trivia Game<i
+                                class="material-icons right">more_vert</i></span>
                         <a href="https://brandonlublin.github.io/triviagame/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Trivia Game<i class="material-icons right">close</i></span>
-                        <p>Trivia Game is a fun, multiple choice game, that asks the user questions pertaining to the 90's. If you think you know the 90's well, put your skills to the test and try it out!</p>
+                        <span class="card-title grey-text text-darken-4">Trivia Game<i
+                                class="material-icons right">close</i></span>
+                        <p>Trivia Game is a fun, multiple choice game, that asks the user questions pertaining to the
+                            90's. If you think you know the 90's well, put your skills to the test and try it out!</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -154,7 +173,7 @@
                             <li>JQuery</li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
@@ -162,12 +181,15 @@
                         <img class="activator" src="assets/images/giphy.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Giphy 2.0<i class="material-icons right">more_vert</i></span>
-                        <a href="https://friend-finder-fsf.herokuapp.com/">View Live Demo</a>
+                        <span class="card-title activator grey-text text-darken-4">Giphy 2.0<i
+                                class="material-icons right">more_vert</i></span>
+                        <a href="https://brandonlublin.github.io/giphy-app/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Giphy 2.0<i class="material-icons right">close</i></span>
-                        <p>Giphy 2.0 is a user interface that pulls and displays GIFs from Giphy's API. You can select one of the preset categories or search your own, and 10 GIFs will display.</p>
+                        <span class="card-title grey-text text-darken-4">Giphy 2.0<i
+                                class="material-icons right">close</i></span>
+                        <p>Giphy 2.0 is a user interface that pulls and displays GIFs from Giphy's API. You can select
+                            one of the preset categories or search your own, and 10 GIFs will display.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -175,7 +197,7 @@
                             <li>JQuery</li>
                         </ul>
                     </div>
-                </div> 
+                </div>
             </div>
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
@@ -183,37 +205,82 @@
                         <img class="activator" src="assets/images/trainStation.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Train Schedule App<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Train Schedule App<i
+                                class="material-icons right">more_vert</i></span>
                         <a href="https://brandonlublin.github.io/train-schedule/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Train Station App<i class="material-icons right">close</i></span>
-                        <p>This Train Schedule allows users to view preexisting train schedules as well as add their own schedule to the interface. Once the user enters each piece of required data, it will be added to the table, and update the schedule every minute.</p>
+                        <span class="card-title grey-text text-darken-4">Train Station App<i
+                                class="material-icons right">close</i></span>
+                        <p>This Train Schedule allows users to view preexisting train schedules as well as add their own
+                            schedule to the interface. Once the user enters each piece of required data, it will be
+                            added to the table, and update the schedule every minute.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
                             <li>JavaScript</li>
                             <li>JQuery</li>
                             <li>Firebase</li>
-                        </ul>
+                        </ul> 
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
     </section>
-    
+    <section>
+        <div class="row">
+            <div class="col s12 m12">
+                <div class="card teal lighten-2">
+                    <div class="card-content white-text">
+                        <span class="card-title"><h2>Skills</h2></span>
+                        <br>
+                        <h4>Front-End Technology</h4>
+                        <hr>
+                        <br>
+                        <i class="devicon-html5-plain-wordmark languageIcon"></i>
+                        <i class="devicon-javascript-plain languageIcon"></i>
+                        <i class="devicon-css3-plain-wordmark languageIcon"></i>
+                        <i class="devicon-bootstrap-plain languageIcon"></i>
+                        <i class="devicon-react-original-wordmark languageIcon"></i>
+                        <i class="devicon-jquery-plain-wordmark languageIcon"></i>
+                        <br><br><br><br>
+                        <h4>Back-End Technology</h4>
+                        <hr>
+                        <br>
+                        <i class="devicon-mysql-plain-wordmark languageIcon"></i>
+                        <i class="devicon-mongodb-plain-wordmark languageIcon"></i>
+                        <i class="devicon-sequelize-plain languageIcon"></i>
+                        <i class="devicon-express-original-wordmark languageIcon"></i>
+                        <i class="devicon-mocha-plain languageIcon"></i>
+                        <i class="devicon-nodejs-plain languageIcon"></i>
+                        <br><br><br><br>
+                        <h4>Other</h4>
+                        <hr>
+                        <br>
+                        <i class="devicon-git-plain-wordmark languageIcon"></i>
+                        <i class="devicon-github-plain languageIcon"></i>
+                        <i class="devicon-heroku-original-wordmark languageIcon"></i>
+                        <br><br><br>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
     <section>
         <footer class="page-footer teal lighten-4">
             <div class="container">
                 <div class="row">
                     <div class="col l8 offset-l2 s12">
                         <div class='logoSet'>
-                            <a href='https://github.com/brandonlublin'><img class='logoLink' src="assets/images/github.svg"
-                                    alt="github"></a>
+                            <a href='https://github.com/brandonlublin'><img class='logoLink'
+                                    src="assets/images/github.svg" alt="github"></a>
                             <a href='https://www.linkedin.com/in/brandon-lublin-78a550a8/'><img class='logoLink'
                                     src="assets/images/linkedin.svg" alt="linkedin"></a>
-    
-                            <a href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
+
+                            <a
+                                href='https://drive.google.com/open?id=0B0XqdtLDfdF9R2pBTEhnUjhFcGNvV1RqUGdVb0RwdFNHX0RR'><img
                                     class='logoLink' src="assets/images/resume.png" alt="resume"></a>
                         </div>
                     </div>
