--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="footer-copyright">
-                <div class='container'>© 2019 Copyright Brandon Lublin</div>
+                <div class='container'>© 2019 Copyright Brandon Lublin<a href='https://github.com/brandonlublin/portfolio_final'> Source</a></div>
             </div>
         </footer>
     </section>
