added latest project (stem) and it's write up of the app

--- a/index.html
+++ b/index.html
@@ -103,10 +103,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Friend Finder<i
                                 class="material-icons right">close</i></span>
-                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the
-                            particular mood of the current weather. Using the WeatherAPI alongside the YouTube API,
-                            WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while
-                            checking their local weather.</p>
+                        <p>Scenario: You run into an old acquaintance at a coffee shop. They ask if they can sit down next to you but there's one problem: You can't remember if you enjoy this persons company or not. Here is where FriendFinder comes in handy. Bust out a quick ten question survey and it won't be too difficult to tell whether or not you want this person at your work station ;)</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
@@ -120,29 +117,25 @@
             <div class='col l4 m6 s12'>
                 <div class="card sticky-action">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/kebab.png">
+                        <img class="activator" src="assets/images/stem.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">KEBÄB<i
+                        <span class="card-title activator grey-text text-darken-4">Stem 🌱<i
                                 class="material-icons right">more_vert</i></span>
-                        <a href="https://project2team6.herokuapp.com/">View Live Demo</a>
+                        <a href="https://stem-stalks.herokuapp.com/">View Live Demo</a>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">KEBÄB<i
+                        <span class="card-title grey-text text-darken-4">Stem 🌱<i
                                 class="material-icons right">close</i></span>
-                        <p>Weather Spot is a dynamic weather application that provides catered playlists to fit the
-                            particular mood of the current weather. Using the WeatherAPI alongside the YouTube API,
-                            WeatherSpot provides the user with 5 options of YouTube videos to watch/listen to while
-                            checking their local weather.</p>
+                        <p>Do you ever get tired of going from social media profile to social media profile for each one of your friends? Why isn't there a way to view each of their profiles in one, centralized location? Well, with Stem, there is! We brought together applications like Tumblr and Twitter, and even posted the links to the rest of your favorite contacts' socials in one simple-to-use application. </p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
-                            <li>JavaScript</li>
-                            <li>JQuery</li>
-                            <li>Materialize</li>
-                            <li>MySQL</li>
-                            <li>Sequelize</li>
-                            <li>Socket.io</li>
+                            <li>Mongo</li>
+                            <li>Express</li>
+                            <li>React</li>
+                            <li>Node</li>
+                            <li>Passport</li>
                         </ul>
                     </div>
                 </div>
@@ -213,8 +206,8 @@
                         <span class="card-title grey-text text-darken-4">Train Station App<i
                                 class="material-icons right">close</i></span>
                         <p>This Train Schedule allows users to view preexisting train schedules as well as add their own
-                            schedule to the interface. Once the user enters each piece of required data, it will be
-                            added to the table, and update the schedule every minute.</p>
+                        schedule to the interface. Once the user enters each piece of required data, it will be
+                        added to the table, and update the schedule every minute.</p>
                         <br>
                         <ul>
                             <li><strong>Built With:</strong></li>
